tests/expand/autoversion_unsafe_fn.expanded.stderr
warning: unused import: `archmage::autoversion`
 --> tests/expand/autoversion_unsafe_fn.expanded.rs:1:5
  |
1 | use archmage::autoversion;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0133]: call to unsafe function `unsafe_sum_v4` is unsafe and requires unsafe block
 --> tests/expand/autoversion_unsafe_fn.expanded.rs:6:20
  |
6 |             return unsafe_sum_v4(__t, ptr, len);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `unsafe_sum_v3` is unsafe and requires unsafe block
 --> tests/expand/autoversion_unsafe_fn.expanded.rs:9:20
  |
9 |             return unsafe_sum_v3(__t, ptr, len);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `unsafe_sum_scalar` is unsafe and requires unsafe block
  --> tests/expand/autoversion_unsafe_fn.expanded.rs:12:5
   |
12 |     unsafe_sum_scalar(archmage::ScalarToken, ptr, len)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
